--- a/src/test/resources/configurations/driver_example.properties
+++ b/src/test/resources/configurations/driver_example.properties
@@ -1,5 +1,5 @@
-remote.web.driver=https://%s:%s@selenoid.autotests.cloud/wd/hub
-remote.web.user=user1
-remote.web.password=1234
-web.browser=chrome
-video.storage=https://selenoid.autotests.cloud/video
+remote.web.driver=
+remote.web.user=
+remote.web.password=
+web.browser=
+video.storage=
