--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,20 @@ tasks.withType(Test) {
     }
 }
 
+tasks.withType(Test) {
+    systemProperties(System.getProperties())
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
+}
+
+test {
+    useJUnitPlatform()
+}
+
 task web(type: Test) {
     useJUnitPlatform {
         includeTags "web", "negative"
