--- a/build.gradle
+++ b/build.gradle
@@ -22,28 +22,25 @@ allure {
 }
 
 dependencies {
-    implementation "org.aeonbits.owner:owner:1.0.12"
     testImplementation(
             "org.aspectj:aspectjweaver:1.9.6",
             "com.codeborne:selenide:$selenideVersion",
-            "com.codeborne:pdf-test:1.6.1",
             "io.qameta.allure:allure-selenide:$allureVersion",
-            "org.hamcrest:hamcrest-all:1.3",
-            "org.assertj:assertj-core:3.19.0",
+            "org.aeonbits.owner:owner:1.0.12",
             "org.slf4j:slf4j-simple:1.7.30",
-            "org.junit.jupiter:junit-jupiter-api:$junitVersion")
+            "org.junit.jupiter:junit-jupiter-api:$junitVersion",
+            "org.junit.jupiter:junit-jupiter-params:$junitVersion")
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
 }
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
 }
 
 tasks.withType(Test) {
     systemProperties(System.getProperties())
-    useJUnitPlatform()
     systemProperty "chromeoptions.prefs", "intl.accept_languages=ru"
 
     if (System.getProperty("threads") != null) {
@@ -58,17 +55,6 @@ tasks.withType(Test) {
 
     testLogging {
         lifecycle {
-//            events "started", "failed"
-            events "started", "skipped", "failed", "standard_error", "standard_out"
-            exceptionFormat "short"
-        }
-    }
-}
-
-tasks.withType(Test) {
-    systemProperties(System.getProperties())
-    testLogging {
-        lifecycle {
             events "started", "skipped", "failed", "standard_error", "standard_out"
             exceptionFormat "short"
         }
@@ -79,8 +65,14 @@ test {
     useJUnitPlatform()
 }
 
-task web(type: Test) {
+task positive(type: Test) {
     useJUnitPlatform {
-        includeTags "web", "negative"
+        includeTags "positive"
+    }
+}
+
+task negative(type: Test) {
+    useJUnitPlatform {
+        includeTags "negative"
     }
 }
