--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,9 @@ dependencies {
             "org.assertj:assertj-core:3.19.0",
             "org.slf4j:slf4j-simple:1.7.30",
             "com.github.automatedowl:allure-environment-writer:1.0.0",
-            "org.junit.jupiter:junit-jupiter-api:$junitVersion",
-            "org.junit.jupiter:junit-jupiter-params:$junitVersion")
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+            "org.junit.jupiter:junit-jupiter:$junitVersion",
+    )
+    testRuntimeOnly "org.junit.platform:junit-platform-launcher:1.7.1"
 }
 
 tasks.withType(JavaCompile) {
